--- a/style.css
+++ b/style.css
@@ -88,9 +88,17 @@ header.shadow {
   gap: 1rem;
 }
 .Accueil-img {
-  order: 3;
-  max-width: max-content;
-  max-height: max-content;
+ position: relative;
+  width: 100%;
+  min-height: 100vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
+  url(1.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .Accueil-img img {
   width: 100%;
